--- a/.github/workflows/github-actions-publish.yml
+++ b/.github/workflows/github-actions-publish.yml
@@ -8,22 +8,54 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - arch: amd64
+            platform: linux/amd64
+          - arch: aarch64
+            platform: linux/arm64
+          - arch: armv7
+            platform: linux/arm/v7
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2.0.0
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish
-        uses: home-assistant/builder@master
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Determine add-on version
+        id: version
+        shell: bash
+        run: |
+          set -euo pipefail
+          VERSION="$(sed -nE 's/^version: \"?([^"]+)\"?$/\\1/p' energysmartbridge/config.yaml | head -n 1)"
+          if [ -z "${VERSION}" ]; then
+            echo "Unable to determine version from energysmartbridge/config.yaml" >&2
+            exit 1
+          fi
+          echo "version=${VERSION}" >> "${GITHUB_OUTPUT}"
+
+      - name: Build and push (${{ matrix.arch }})
+        uses: docker/build-push-action@v6
         with:
-          args: |
-            --all \
-            --docker-hub "ghcr.io/starsoccer" \
-            --image "energysmartbridge/{arch}" \
-            --target energysmartbridge
+          context: ./energysmartbridge
+          file: ./energysmartbridge/Dockerfile
+          push: true
+          platforms: ${{ matrix.platform }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/energysmartbridge/${{ matrix.arch }}:${{ steps.version.outputs.version }}
