--- a/.github/workflows/github-actions-publish.yml
+++ b/.github/workflows/github-actions-publish.yml
@@ -1,8 +1,10 @@
 name: "Publish"
 
 on:
+  push:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -38,17 +40,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Determine add-on version
-        id: version
+      - name: Compute image tags
+        id: tags
         shell: bash
         run: |
           set -euo pipefail
-          VERSION="$(sed -nE 's/^version: \"?([^"]+)\"?$/\\1/p' energysmartbridge/config.yaml | head -n 1)"
-          if [ -z "${VERSION}" ]; then
-            echo "Unable to determine version from energysmartbridge/config.yaml" >&2
-            exit 1
-          fi
-          echo "version=${VERSION}" >> "${GITHUB_OUTPUT}"
+          IMAGE="ghcr.io/${{ github.repository_owner }}/energysmartbridge/${{ matrix.arch }}"
+
+          {
+            echo "tags<<EOF"
+            echo "${IMAGE}:${GITHUB_SHA}"
+            if [ "${GITHUB_EVENT_NAME}" = "release" ]; then
+              VERSION="$(sed -nE 's/^version: \"?([^"]+)\"?$/\\1/p' energysmartbridge/config.yaml | head -n 1)"
+              if [ -z "${VERSION}" ]; then
+                echo "Unable to determine version from energysmartbridge/config.yaml" >&2
+                exit 1
+              fi
+              echo "${IMAGE}:${VERSION}"
+            fi
+            echo "EOF"
+          } >> "${GITHUB_OUTPUT}"
 
       - name: Build and push (${{ matrix.arch }})
         uses: docker/build-push-action@v6
@@ -57,5 +68,4 @@ jobs:
           file: ./energysmartbridge/Dockerfile
           push: true
           platforms: ${{ matrix.platform }}
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/energysmartbridge/${{ matrix.arch }}:${{ steps.version.outputs.version }}
+          tags: ${{ steps.tags.outputs.tags }}
